tests/NormalTests/paczka1/small_fuzzy/77858716.err
Error in line 6: tz6 A906 X4,6
Error in line 8: JEs2Ivtks A643 292,8
Error in line 11: JEs2Ivtks S561 89,9
